2003/11/25 17:26 (-0500) rwmcfa1

	* Makefile.PL: we depend on Gnome2-VFS now b/c Gnome2 does.

2003/11/24 23:02 (-0500) rwmcfa1

	* perl-Gnome2-Print.spec.in: fixed requires bug.

2003/11/13 21:15 (-0500) muppetman


	* Makefile.PL, README: require 1.00 rather than 1.00rc1 -- we disavow
	the existence of the release candidates.

2003/11/11 00:36 (-0500) muppetman

	* MANIFEST, debian/*: remove the debian packaging files, since having
	them in the upstream dist makes it difficult for the maintainers

2003/10/20 19:59 ebassi

	* t/05.GnomeFont.t: included tests for newly implemented methods.
	* pm/Font.pm: corrected stupid typo inside package name.
	* xs/GnomeFont.xs: implemented
		gnome_font_get_glyph_stadvance
		gnome_font_get_glyph_stdbbox
		gnome_font_get_glyph_stdkerning
	  these methods requires libart structures, but since libart has no
	  perl binding, I've implemented the return values as arrayrefs of
	  doubles.
	* xs/GnomeFont.xs: implemented
		gnome_font_face_get_name
		gnome_font_face_get_ps_name
		gnome_font_face_get_family_name
		gnome_font_face_get_species_name
		gnome_font_face_get_species_name
		gnome_font_face_get_stdbbox
		gnome_font_face_get_glyph_stdbbox
		gnome_font_face_get_glyph_stdadvance
		gnome_font_face_get_glyph_stdkerning
		gnome_font_face_get_glyph_ps_name

2003/10/10 15:40 ebassi

	* Print.pm: bumped to version 0.51
	
	* debian/: debianized package

2003/09/21 20:19 rwmcfa1

	* Makefile.PL: fixed bug in specfile generation

2003/09/17 10:44 rwmcfa1

	* Makefile.PL: ExtUtils::PkgConfig can now deal with version 
	requirements using pkg-config's interface, make use of it.

	* t/04.GnomePrintDialog.t: skip unless we have a display

2003/09/16 23:50 rwmcfa1

	* Makefile.PL, perl-*spec.in: somewhat automated versioning system 
	implemented for depenancy modules

2003/09/15 22:26 rwmcfa1

	* Makefile.PL: spec file dependancies improved

2003/09/11 21:02 rwmcfa1
	
	* xs/GnomePrintUnit.xs, xs/GnomePrintConfig.xs: PREFIX added/moved.
